# Vibe-Check-App-Complete

vibe_check_flutter_frontend/: README.md  prd.txt  pubspec.yaml
vibe_check_flutter_frontend/android/app/: build.gradle.kts
vibe_check_flutter_frontend/ios/Runner/: Info.plist
vibe_check_flutter_frontend/ios/Runner.xcodeproj/: project.pbxproj
vibe_check_flutter_frontend/lib/: main.dart
vibe_check_flutter_frontend/lib/core/colors/: app_colors.dart
vibe_check_flutter_frontend/lib/core/permissions/: app_permissions.dart
vibe_check_flutter_frontend/lib/core/theme/: app_theme.dart
vibe_check_flutter_frontend/lib/data/: style_repository.dart  style_result.dart
vibe_check_flutter_frontend/lib/data/model/: agent_request_model.dart  agent_response_model.dart
vibe_check_flutter_frontend/lib/model/: style_repository.dart  style_result.dart
vibe_check_flutter_frontend/linux/: CMakeLists.txt
vibe_check_flutter_frontend/linux/runner/: my_application.cc
vibe_check_flutter_frontend/macos/Runner.xcodeproj/: project.pbxproj
vibe_check_flutter_frontend/test/: widget_test.dart
vibe_check_flutter_frontend/web/: index.html  manifest.json
vibe_check_flutter_frontend/windows/: CMakeLists.txt
vibe_check_flutter_frontend/windows/runner/: Runner.rc  main.cpp
vibe_check_python_backend/: main.py  pyproject.toml  requirements.txt
vibe_check_python_backend/app/agent/: vibe_check_agent.py
vibe_check_python_backend/app/api/: vibe.py
vibe_check_python_backend/app/core/: config.py
vibe_check_python_backend/app/schemas/: analyze.py
(+15 files in other folders)
